--- a/index.html
+++ b/index.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Waruni Amanthi</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Waruni Amanthi | Portfolio & Blog</title>
+  <style>
+    /* Basic Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
+    
+    body {
+      background-color: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #4B9CD3;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    nav {
+      background: #333;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #4B9CD3;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 1000px;
+      margin: 20px auto;
+    }
+
+    h1, h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .intro {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .blog-post {
+      background: white;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .blog-post h3 {
+      color: #4B9CD3;
+      margin-bottom: 10px;
+    }
+
+    .blog-post p {
+      font-size: 16px;
+    }
+
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
 
-  <a href="blog.html">Go to My Blog</a>
+  <header>
+    <h1>Waruni Amanthi</h1>
+    <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="blog.html">Blog</a>
+    <a href="#">Projects</a>
+    <a href="#">About Me</a>
+  </nav>
+
+  <div class="container">
+    <h2>Welcome to My Blog</h2>
+    <div class="intro">
+      <p>Here I share my learning journey, projects, and experiences in software development and IT.</p>
+    </div>
+
+    <!-- Blog Post Example -->
+    <div class="blog-post">
+      <h3>My First Blog Post</h3>
+      <p><b>Date:</b> Feb 2026</p>
+      <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies. This is my first step in building a professional portfolio online.</p>
+    </div>
+
+    <div class="blog-post">
+      <h3>Learning CRUD Operations</h3>
+      <p><b>Date:</b> Feb 2026</p>
+      <p>I recently developed a simple Inventory Management Module that uses CRUD operations to manage products, stock, and locations. Writing about this helps me reflect and share knowledge with others.</p>
+    </div>
+
+  </div>
+
+  <footer>
+    <p>© 2026 Waruni Amanthi | <a href="mailto:youremail@example.com" style="color:#4B9CD3;">Contact Me</a></p>
+  </footer>
+
 </body>
 </html>
