--- a/index.html
+++ b/index.html
@@ -4,108 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Waruni Amanthi | Portfolio & Blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     /* Basic Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-    
-    body {
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Inter', sans-serif; color: #333; line-height: 1.6; scroll-behavior: smooth; }
 
-    header {
-      background-color: #4B9CD3;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
+    /* Navigation */
+    nav { position: fixed; width: 100%; background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); z-index: 1000; }
+    nav ul { display: flex; justify-content: center; list-style: none; padding: 15px 0; }
+    nav ul li { margin: 0 20px; }
+    nav ul li a { text-decoration: none; color: #333; font-weight: 600; transition: 0.3s; }
+    nav ul li a:hover { color: #4B9CD3; }
 
-    nav {
-      background: #333;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
+    /* Sections */
+    section { padding: 100px 20px; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
+    #home { background: #f5f5f5; text-align: center; }
+    #about { background: #fff; }
+    #skills { background: #f5f5f5; }
+    #blog { background: #fff; }
+    #contact { background: #f5f5f5; }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
+    h1, h2 { margin-bottom: 20px; }
+    h1 { font-size: 3em; color: #4B9CD3; }
+    h2 { font-size: 2em; color: #333; text-align: center; }
 
-    nav a:hover {
-      color: #4B9CD3;
-    }
+    p { max-width: 700px; margin: 0 auto 20px auto; text-align: center; font-size: 1.1em; }
 
-    .container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 20px auto;
-    }
+    /* Skills Section */
+    .skills-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 40px; }
+    .skill { background: #4B9CD3; color: #fff; padding: 15px 25px; border-radius: 8px; font-weight: 600; transition: 0.3s; }
+    .skill:hover { background: #357ab7; }
 
-    h1, h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    /* Blog Posts */
+    .blog-post { background: #f5f5f5; margin: 20px auto; padding: 20px; max-width: 700px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    .blog-post h3 { color: #4B9CD3; margin-bottom: 10px; }
+    .blog-post p { font-size: 1em; }
 
-    .intro {
-      text-align: center;
-      margin-bottom: 40px;
-    }
+    /* Footer */
+    footer { background: #333; color: white; text-align: center; padding: 20px 0; }
+    footer a { color: #4B9CD3; text-decoration: none; }
 
-    .blog-post {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
+    /* Buttons */
+    .btn { display: inline-block; padding: 10px 20px; background: #4B9CD3; color: #fff; border-radius: 5px; text-decoration: none; font-weight: 600; transition: 0.3s; }
+    .btn:hover { background: #357ab7; }
 
-    .blog-post h3 {
-      color: #4B9CD3;
-      margin-bottom: 10px;
-    }
-
-    .blog-post p {
-      font-size: 16px;
-    }
-
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 15px 0;
-      margin-top: 40px;
+    /* Responsive */
+    @media(max-width:768px){
+      h1 { font-size: 2.5em; }
+      h2 { font-size: 1.8em; }
+      nav ul { flex-direction: column; }
+      nav ul li { margin: 10px 0; }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Waruni Amanthi</h1>
-    <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
-  </header>
-
+  <!-- Navigation -->
   <nav>
-    <a href="index.html">Home</a>
-    <a href="blog.html">Blog</a>
-    <a href="#">Projects</a>
-    <a href="#">About Me</a>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
   </nav>
 
-  <div class="container">
-    <h2>Welcome to My Blog</h2>
-    <div class="intro">
-      <p>Here I share my learning journey, projects, and experiences in software development and IT.</p>
-    </div>
+  <!-- Home Section -->
+  <section id="home">
+    <h1>Waruni Amanthi</h1>
+    <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
+    <a href="#about" class="btn">Learn More</a>
+  </section>
 
-    <!-- Blog Post Example -->
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am an IT undergraduate at SLIIT with a passion for software engineering. I enjoy developing web applications, working with Odoo ERP, and continuously learning new technologies. My goal is to build real-world projects and contribute to the tech community.</p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills & Talents</h2>
+    <div class="skills-container">
+      <div class="skill">Web Development</div>
+      <div class="skill">Odoo ERP</div>
+      <div class="skill">CRUD Operations</div>
+      <div class="skill">Problem Solving</div>
+      <div class="skill">Teamwork</div>
+      <div class="skill">Continuous Learning</div>
+    </div>
+  </section>
+
+  <!-- Blog Section -->
+  <section id="blog">
+    <h2>My Blog</h2>
+
     <div class="blog-post">
       <h3>My First Blog Post</h3>
       <p><b>Date:</b> Feb 2026</p>
-      <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies. This is my first step in building a professional portfolio online.</p>
+      <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies.</p>
     </div>
 
     <div class="blog-post">
@@ -113,11 +112,17 @@
       <p><b>Date:</b> Feb 2026</p>
       <p>I recently developed a simple Inventory Management Module that uses CRUD operations to manage products, stock, and locations. Writing about this helps me reflect and share knowledge with others.</p>
     </div>
+  </section>
 
-  </div>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>If you want to connect, feel free to email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
+  </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2026 Waruni Amanthi | <a href="mailto:youremail@example.com" style="color:#4B9CD3;">Contact Me</a></p>
+    <p>© 2026 Waruni Amanthi | Designed & Built by Me</p>
   </footer>
 
 </body>
