--- a/index.html
+++ b/index.html
@@ -6,55 +6,54 @@
   <title>Waruni Amanthi | Portfolio & Blog</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Basic Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; color: #333; line-height: 1.6; scroll-behavior: smooth; }
+    /* Reset & Base */
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family: 'Inter', sans-serif; line-height:1.6; scroll-behavior: smooth; color:#333; }
+    a { text-decoration:none; }
 
     /* Navigation */
-    nav { position: fixed; width: 100%; background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); z-index: 1000; }
-    nav ul { display: flex; justify-content: center; list-style: none; padding: 15px 0; }
-    nav ul li { margin: 0 20px; }
-    nav ul li a { text-decoration: none; color: #333; font-weight: 600; transition: 0.3s; }
-    nav ul li a:hover { color: #4B9CD3; }
+    nav { position: fixed; width:100%; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); z-index:1000; transition:0.3s; }
+    nav ul { display:flex; justify-content:center; list-style:none; padding:15px 0; }
+    nav ul li { margin:0 20px; }
+    nav ul li a { font-weight:600; color:#333; transition:0.3s; }
+    nav ul li a:hover { color:#4B9CD3; }
 
     /* Sections */
-    section { padding: 100px 20px; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
-    #home { background: #f5f5f5; text-align: center; }
-    #about { background: #fff; }
-    #skills { background: #f5f5f5; }
-    #blog { background: #fff; }
-    #contact { background: #f5f5f5; }
+    section { padding:120px 20px; min-height:100vh; display:flex; flex-direction:column; justify-content:center; opacity:0; transform: translateY(50px); transition: all 1s ease; }
+    section.visible { opacity:1; transform: translateY(0); }
 
-    h1, h2 { margin-bottom: 20px; }
-    h1 { font-size: 3em; color: #4B9CD3; }
-    h2 { font-size: 2em; color: #333; text-align: center; }
+    #home { background:#f5f5f5; text-align:center; }
+    #about, #blog { background:#fff; }
+    #skills, #contact { background:#f5f5f5; }
 
-    p { max-width: 700px; margin: 0 auto 20px auto; text-align: center; font-size: 1.1em; }
+    h1 { font-size:3em; color:#4B9CD3; margin-bottom:20px; }
+    h2 { font-size:2em; text-align:center; margin-bottom:20px; }
+    p { max-width:700px; margin:0 auto 20px auto; font-size:1.1em; text-align:center; }
 
-    /* Skills Section */
-    .skills-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 40px; }
-    .skill { background: #4B9CD3; color: #fff; padding: 15px 25px; border-radius: 8px; font-weight: 600; transition: 0.3s; }
-    .skill:hover { background: #357ab7; }
+    /* Skills */
+    .skills-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
+    .skill { background:#4B9CD3; color:#fff; padding:15px 25px; border-radius:10px; font-weight:600; transition:0.3s; }
+    .skill:hover { background:#357ab7; transform: scale(1.1); }
 
-    /* Blog Posts */
-    .blog-post { background: #f5f5f5; margin: 20px auto; padding: 20px; max-width: 700px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    .blog-post h3 { color: #4B9CD3; margin-bottom: 10px; }
-    .blog-post p { font-size: 1em; }
+    /* Blog posts */
+    .blog-post { background:#f5f5f5; margin:20px auto; padding:20px; max-width:700px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s; }
+    .blog-post:hover { transform: translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2); }
+    .blog-post h3 { color:#4B9CD3; margin-bottom:10px; }
+
+    /* Button */
+    .btn { display:inline-block; padding:10px 20px; background:#4B9CD3; color:#fff; border-radius:5px; font-weight:600; transition:0.3s; margin-top:10px; }
+    .btn:hover { background:#357ab7; }
 
     /* Footer */
-    footer { background: #333; color: white; text-align: center; padding: 20px 0; }
-    footer a { color: #4B9CD3; text-decoration: none; }
-
-    /* Buttons */
-    .btn { display: inline-block; padding: 10px 20px; background: #4B9CD3; color: #fff; border-radius: 5px; text-decoration: none; font-weight: 600; transition: 0.3s; }
-    .btn:hover { background: #357ab7; }
+    footer { background:#333; color:#fff; text-align:center; padding:20px 0; }
+    footer a { color:#4B9CD3; }
 
     /* Responsive */
     @media(max-width:768px){
-      h1 { font-size: 2.5em; }
-      h2 { font-size: 1.8em; }
-      nav ul { flex-direction: column; }
-      nav ul li { margin: 10px 0; }
+      h1{font-size:2.2em;}
+      h2{font-size:1.6em;}
+      nav ul { flex-direction:column; }
+      nav ul li { margin:10px 0; }
     }
   </style>
 </head>
@@ -100,13 +99,11 @@
   <!-- Blog Section -->
   <section id="blog">
     <h2>My Blog</h2>
-
     <div class="blog-post">
       <h3>My First Blog Post</h3>
       <p><b>Date:</b> Feb 2026</p>
       <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies.</p>
     </div>
-
     <div class="blog-post">
       <h3>Learning CRUD Operations</h3>
       <p><b>Date:</b> Feb 2026</p>
@@ -117,7 +114,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>If you want to connect, feel free to email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
+    <p>If you want to connect, email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
   </section>
 
   <!-- Footer -->
@@ -125,5 +122,17 @@
     <p>© 2026 Waruni Amanthi | Designed & Built by Me</p>
   </footer>
 
+  <!-- JS for fade-in animation -->
+  <script>
+    const sections = document.querySelectorAll('section');
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting){
+          entry.target.classList.add('visible');
+        }
+      });
+    }, {threshold:0.2});
+    sections.forEach(section => observer.observe(section));
+  </script>
 </body>
 </html>
