--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Waruni Amanthi | Portfolio & Blog</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* Reset & Base */
     * { margin:0; padding:0; box-sizing:border-box; }
-    body { font-family: 'Inter', sans-serif; line-height:1.6; scroll-behavior: smooth; color:#333; }
-    a { text-decoration:none; }
+    body { font-family: 'Inter', sans-serif; line-height:1.6; scroll-behavior: smooth; color:#333; background:#f5f5f5; }
+    a { text-decoration:none; color:inherit; }
 
     /* Navigation */
     nav { position: fixed; width:100%; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); z-index:1000; transition:0.3s; }
-    nav ul { display:flex; justify-content:center; list-style:none; padding:15px 0; }
+    nav ul { display:flex; justify-content:center; list-style:none; padding:15px 0; flex-wrap: wrap; }
     nav ul li { margin:0 20px; }
     nav ul li a { font-weight:600; color:#333; transition:0.3s; }
     nav ul li a:hover { color:#4B9CD3; }
@@ -24,16 +25,26 @@
 
     #home { background:#f5f5f5; text-align:center; }
     #about, #blog { background:#fff; }
-    #skills, #contact { background:#f5f5f5; }
+    #skills, #projects, #contact { background:#f5f5f5; }
 
     h1 { font-size:3em; color:#4B9CD3; margin-bottom:20px; }
     h2 { font-size:2em; text-align:center; margin-bottom:20px; }
     p { max-width:700px; margin:0 auto 20px auto; font-size:1.1em; text-align:center; }
 
+    /* Hero / Profile */
+    .profile-img { width:150px; height:150px; border-radius:50%; object-fit:cover; border:4px solid #4B9CD3; margin:20px auto; }
+
     /* Skills */
     .skills-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
     .skill { background:#4B9CD3; color:#fff; padding:15px 25px; border-radius:10px; font-weight:600; transition:0.3s; }
     .skill:hover { background:#357ab7; transform: scale(1.1); }
+
+    /* Projects */
+    .projects-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
+    .project-card { background:#fff; padding:20px; max-width:300px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s; }
+    .project-card:hover { transform: translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2); }
+    .project-card img { width:100%; border-radius:10px; }
+    .project-card h3 { color:#4B9CD3; margin:10px 0; }
 
     /* Blog posts */
     .blog-post { background:#f5f5f5; margin:20px auto; padding:20px; max-width:700px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s; }
@@ -43,6 +54,11 @@
     /* Button */
     .btn { display:inline-block; padding:10px 20px; background:#4B9CD3; color:#fff; border-radius:5px; font-weight:600; transition:0.3s; margin-top:10px; }
     .btn:hover { background:#357ab7; }
+
+    /* Social Icons */
+    .social-icons { display:flex; justify-content:center; gap:15px; margin-top:10px; }
+    .social-icons a { font-size:1.5em; color:#333; transition:0.3s; }
+    .social-icons a:hover { color:#4B9CD3; }
 
     /* Footer */
     footer { background:#333; color:#fff; text-align:center; padding:20px 0; }
@@ -54,6 +70,7 @@
       h2{font-size:1.6em;}
       nav ul { flex-direction:column; }
       nav ul li { margin:10px 0; }
+      .projects-container { flex-direction:column; align-items:center; }
     }
   </style>
 </head>
@@ -65,6 +82,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
       <li><a href="#blog">Blog</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -72,15 +90,21 @@
 
   <!-- Home Section -->
   <section id="home">
+    <img src="profile.jpg" alt="Profile Image" class="profile-img">
     <h1>Waruni Amanthi</h1>
     <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
+    <div class="social-icons">
+      <a href="https://github.com/waruniamanthi7-stack" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
+    </div>
     <a href="#about" class="btn">Learn More</a>
   </section>
 
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I am an IT undergraduate at SLIIT with a passion for software engineering. I enjoy developing web applications, working with Odoo ERP, and continuously learning new technologies. My goal is to build real-world projects and contribute to the tech community.</p>
+    <p>I am an IT undergraduate at SLIIT passionate about software engineering. I enjoy developing web applications, working with Odoo ERP, and continuously learning new technologies. My goal is to build real-world projects and contribute to the tech community.</p>
   </section>
 
   <!-- Skills Section -->
@@ -93,6 +117,25 @@
       <div class="skill">Problem Solving</div>
       <div class="skill">Teamwork</div>
       <div class="skill">Continuous Learning</div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <img src="project1.png" alt="Project Screenshot">
+        <h3>Inventory Management Module</h3>
+        <p>Developed CRUD system in Odoo to manage products, stock, and locations.</p>
+        <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+      </div>
+      <div class="project-card">
+        <img src="project2.png" alt="Project Screenshot">
+        <h3>Personal Portfolio Website</h3>
+        <p>Created a single-page portfolio blog to showcase projects and skills.</p>
+        <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+      </div>
     </div>
   </section>
 
