--- a/index.html
+++ b/index.html
@@ -1,164 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Waruni Amanthi | Portfolio & Blog</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    /* Reset & Base */
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body { font-family: 'Inter', sans-serif; line-height:1.6; scroll-behavior: smooth; color:#333; background:#f5f5f5; }
-    a { text-decoration:none; color:inherit; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Waruni Amanthi | Portfolio & Blog</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+  *{margin:0;padding:0;box-sizing:border-box;}
+  body{font-family:'Inter',sans-serif; line-height:1.6; color:#333; background:#f5f5f5; scroll-behavior:smooth;}
+  a{text-decoration:none; color:inherit;}
 
-    /* Navigation */
-    nav { position: fixed; width:100%; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); z-index:1000; transition:0.3s; }
-    nav ul { display:flex; justify-content:center; list-style:none; padding:15px 0; flex-wrap: wrap; }
-    nav ul li { margin:0 20px; }
-    nav ul li a { font-weight:600; color:#333; transition:0.3s; }
-    nav ul li a:hover { color:#4B9CD3; }
+  /* Sidebar Navigation */
+  nav{position:fixed; left:0; top:0; width:80px; height:100%; background:#fff; box-shadow:2px 0 5px rgba(0,0,0,0.1); display:flex; flex-direction:column; align-items:center; padding-top:20px; z-index:1000;}
+  nav a{margin:20px 0; color:#333; font-size:1.5em; transition:0.3s;}
+  nav a:hover{color:#4B9CD3;}
 
-    /* Sections */
-    section { padding:120px 20px; min-height:100vh; display:flex; flex-direction:column; justify-content:center; opacity:0; transform: translateY(50px); transition: all 1s ease; }
-    section.visible { opacity:1; transform: translateY(0); }
+  /* Sections */
+  main{margin-left:80px;}
+  section{min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; padding:60px 20px; opacity:0; transform: translateY(50px); transition: all 1s ease;}
+  section.visible{opacity:1; transform: translateY(0);}
+  
+  /* Hero */
+  #home{background: linear-gradient(135deg,#f5f5f5,#e0f0ff); text-align:center;}
+  .profile-img{width:150px;height:150px;border-radius:50%;border:4px solid #4B9CD3;object-fit:cover;margin-bottom:20px;}
+  h1{font-size:3em;color:#4B9CD3;margin-bottom:10px;}
+  p.tagline{font-size:1.2em; margin-bottom:20px;}
+  .btn{padding:10px 20px;background:#4B9CD3;color:#fff;border-radius:5px;font-weight:600;transition:0.3s;}
+  .btn:hover{background:#357ab7;}
 
-    #home { background:#f5f5f5; text-align:center; }
-    #about, #blog { background:#fff; }
-    #skills, #projects, #contact { background:#f5f5f5; }
+  /* Social Icons */
+  .social-icons{display:flex;gap:15px;margin-bottom:20px;}
+  .social-icons a{font-size:1.5em;color:#333;transition:0.3s;}
+  .social-icons a:hover{color:#4B9CD3;}
 
-    h1 { font-size:3em; color:#4B9CD3; margin-bottom:20px; }
-    h2 { font-size:2em; text-align:center; margin-bottom:20px; }
-    p { max-width:700px; margin:0 auto 20px auto; font-size:1.1em; text-align:center; }
+  /* Skills Section */
+  #skills h2{text-align:center;margin-bottom:30px;}
+  .skills-container{width:80%; max-width:700px;}
+  .skill-bar{margin-bottom:15px;}
+  .skill-title{font-weight:600;margin-bottom:5px;}
+  .skill-progress{width:100%; background:#ddd; border-radius:5px; overflow:hidden;}
+  .skill-progress div{height:20px; width:0; background:#4B9CD3; border-radius:5px; transition:1s;}
 
-    /* Hero / Profile */
-    .profile-img { width:150px; height:150px; border-radius:50%; object-fit:cover; border:4px solid #4B9CD3; margin:20px auto; }
+  /* Projects Section */
+  #projects h2{text-align:center;margin-bottom:30px;}
+  .projects-container{display:flex; flex-wrap:wrap; justify-content:center; gap:20px;}
+  .project-card{background:#fff; padding:20px; max-width:300px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s;}
+  .project-card:hover{transform:translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2);}
+  .project-card img{width:100%; border-radius:10px;}
+  .project-card h3{color:#4B9CD3;margin:10px 0;}
 
-    /* Skills */
-    .skills-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
-    .skill { background:#4B9CD3; color:#fff; padding:15px 25px; border-radius:10px; font-weight:600; transition:0.3s; }
-    .skill:hover { background:#357ab7; transform: scale(1.1); }
+  /* Blog Section */
+  #blog h2{text-align:center;margin-bottom:30px;}
+  .blog-post{background:#f5f5f5;margin:20px; padding:20px; max-width:700px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s;}
+  .blog-post:hover{transform:translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2);}
+  .blog-post h3{color:#4B9CD3;margin-bottom:10px;}
 
-    /* Projects */
-    .projects-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:40px; }
-    .project-card { background:#fff; padding:20px; max-width:300px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s; }
-    .project-card:hover { transform: translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2); }
-    .project-card img { width:100%; border-radius:10px; }
-    .project-card h3 { color:#4B9CD3; margin:10px 0; }
+  /* Contact Section */
+  #contact h2{text-align:center;margin-bottom:20px;}
+  #contact p{text-align:center;}
 
-    /* Blog posts */
-    .blog-post { background:#f5f5f5; margin:20px auto; padding:20px; max-width:700px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1); transition:0.3s; }
-    .blog-post:hover { transform: translateY(-5px); box-shadow:0 5px 12px rgba(0,0,0,0.2); }
-    .blog-post h3 { color:#4B9CD3; margin-bottom:10px; }
+  /* Footer */
+  footer{background:#333;color:#fff;text-align:center;padding:20px;}
+  footer a{color:#4B9CD3;}
 
-    /* Button */
-    .btn { display:inline-block; padding:10px 20px; background:#4B9CD3; color:#fff; border-radius:5px; font-weight:600; transition:0.3s; margin-top:10px; }
-    .btn:hover { background:#357ab7; }
-
-    /* Social Icons */
-    .social-icons { display:flex; justify-content:center; gap:15px; margin-top:10px; }
-    .social-icons a { font-size:1.5em; color:#333; transition:0.3s; }
-    .social-icons a:hover { color:#4B9CD3; }
-
-    /* Footer */
-    footer { background:#333; color:#fff; text-align:center; padding:20px 0; }
-    footer a { color:#4B9CD3; }
-
-    /* Responsive */
-    @media(max-width:768px){
-      h1{font-size:2.2em;}
-      h2{font-size:1.6em;}
-      nav ul { flex-direction:column; }
-      nav ul li { margin:10px 0; }
-      .projects-container { flex-direction:column; align-items:center; }
-    }
-  </style>
+  /* Responsive */
+  @media(max-width:768px){
+    nav{width:60px;}
+    main{margin-left:60px;}
+    h1{font-size:2.2em;}
+    .projects-container{flex-direction:column;align-items:center;}
+  }
+</style>
 </head>
 <body>
 
-  <!-- Navigation -->
+  <!-- Sidebar Navigation -->
   <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#blog">Blog</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <a href="#home" title="Home"><i class="fas fa-home"></i></a>
+    <a href="#about" title="About"><i class="fas fa-user"></i></a>
+    <a href="#skills" title="Skills"><i class="fas fa-code"></i></a>
+    <a href="#projects" title="Projects"><i class="fas fa-folder-open"></i></a>
+    <a href="#blog" title="Blog"><i class="fas fa-blog"></i></a>
+    <a href="#contact" title="Contact"><i class="fas fa-envelope"></i></a>
   </nav>
 
-  <!-- Home Section -->
-  <section id="home">
-    <img src="profile.jpg" alt="Profile Image" class="profile-img">
-    <h1>Waruni Amanthi</h1>
-    <p>IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
-    <div class="social-icons">
-      <a href="https://github.com/waruniamanthi7-stack" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
-    </div>
-    <a href="#about" class="btn">Learn More</a>
-  </section>
-
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am an IT undergraduate at SLIIT passionate about software engineering. I enjoy developing web applications, working with Odoo ERP, and continuously learning new technologies. My goal is to build real-world projects and contribute to the tech community.</p>
-  </section>
-
-  <!-- Skills Section -->
-  <section id="skills">
-    <h2>Skills & Talents</h2>
-    <div class="skills-container">
-      <div class="skill">Web Development</div>
-      <div class="skill">Odoo ERP</div>
-      <div class="skill">CRUD Operations</div>
-      <div class="skill">Problem Solving</div>
-      <div class="skill">Teamwork</div>
-      <div class="skill">Continuous Learning</div>
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <div class="project-card">
-        <img src="project1.png" alt="Project Screenshot">
-        <h3>Inventory Management Module</h3>
-        <p>Developed CRUD system in Odoo to manage products, stock, and locations.</p>
-        <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+  <main>
+    <!-- Home Section -->
+    <section id="home">
+      <img src="profile.jpg" alt="Profile Image" class="profile-img">
+      <h1>Waruni Amanthi</h1>
+      <p class="tagline">IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
+      <div class="social-icons">
+        <a href="https://github.com/waruniamanthi7-stack" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
       </div>
-      <div class="project-card">
-        <img src="project2.png" alt="Project Screenshot">
-        <h3>Personal Portfolio Website</h3>
-        <p>Created a single-page portfolio blog to showcase projects and skills.</p>
-        <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+      <a href="#about" class="btn">Learn More</a>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I am an IT undergraduate at SLIIT passionate about software engineering. I enjoy developing web applications, working with Odoo ERP, and continuously learning new technologies. My goal is to build real-world projects and contribute to the tech community.</p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills & Talents</h2>
+      <div class="skills-container">
+        <div class="skill-bar">
+          <div class="skill-title">Web Development</div>
+          <div class="skill-progress"><div style="width:80%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <div class="skill-title">Odoo ERP</div>
+          <div class="skill-progress"><div style="width:70%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <div class="skill-title">CRUD Operations</div>
+          <div class="skill-progress"><div style="width:75%"></div></div>
+        </div>
+        <div class="skill-bar">
+          <div class="skill-title">Problem Solving</div>
+          <div class="skill-progress"><div style="width:85%"></div></div>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Blog Section -->
-  <section id="blog">
-    <h2>My Blog</h2>
-    <div class="blog-post">
-      <h3>My First Blog Post</h3>
-      <p><b>Date:</b> Feb 2026</p>
-      <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies.</p>
-    </div>
-    <div class="blog-post">
-      <h3>Learning CRUD Operations</h3>
-      <p><b>Date:</b> Feb 2026</p>
-      <p>I recently developed a simple Inventory Management Module that uses CRUD operations to manage products, stock, and locations. Writing about this helps me reflect and share knowledge with others.</p>
-    </div>
-  </section>
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="projects-container">
+        <div class="project-card">
+          <img src="project1.png" alt="Inventory Module">
+          <h3>Inventory Management Module</h3>
+          <p>Developed CRUD system in Odoo to manage products, stock, and locations.</p>
+          <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+        </div>
+        <div class="project-card">
+          <img src="project2.png" alt="Portfolio Website">
+          <h3>Personal Portfolio Website</h3>
+          <p>Created a single-page portfolio blog to showcase projects and skills.</p>
+          <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+        </div>
+      </div>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>If you want to connect, email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
-  </section>
+    <!-- Blog Section -->
+    <section id="blog">
+      <h2>My Blog</h2>
+      <div class="blog-post">
+        <h3>My First Blog Post</h3>
+        <p><b>Date:</b> Feb 2026</p>
+        <p>This blog documents my journey as an IT student at SLIIT. I am learning software engineering, working on projects in Odoo ERP, and exploring modern technologies.</p>
+      </div>
+      <div class="blog-post">
+        <h3>Learning CRUD Operations</h3>
+        <p><b>Date:</b> Feb 2026</p>
+        <p>I recently developed a simple Inventory Management Module that uses CRUD operations to manage products, stock, and locations. Writing about this helps me reflect and share knowledge with others.</p>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>If you want to connect, email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer>
@@ -167,15 +176,13 @@
 
   <!-- JS for fade-in animation -->
   <script>
-    const sections = document.querySelectorAll('section');
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting){
-          entry.target.classList.add('visible');
-        }
+    const sections=document.querySelectorAll('section');
+    const observer=new IntersectionObserver(entries=>{
+      entries.forEach(entry=>{
+        if(entry.isIntersecting){entry.target.classList.add('visible');}
       });
-    }, {threshold:0.2});
-    sections.forEach(section => observer.observe(section));
+    },{threshold:0.2});
+    sections.forEach(section=>observer.observe(section));
   </script>
 </body>
 </html>
