--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h1>Waruni Amanthi</h1>
       <p class="tagline">IT Undergraduate at SLIIT | Aspiring Software Engineer</p>
       <div class="social-icons">
-        <a href="https://github.com/waruniamanthi7-stack" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/waruni-amanthi" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a>
       </div>
