Update my github user name

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
           <img src="project1.png" alt="Inventory Module">
           <h3>Inventory Management Module</h3>
           <p>Developed CRUD system in Odoo to manage products, stock, and locations.</p>
-          <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+          <a href="https://github.com/waruni-amanthi" target="_blank" class="btn">View on GitHub</a>
         </div>
         <div class="project-card">
           <img src="project2.png" alt="Portfolio Website">
           <h3>Personal Portfolio Website</h3>
           <p>Created a single-page portfolio blog to showcase projects and skills.</p>
-          <a href="https://github.com/waruniamanthi7-stack" target="_blank" class="btn">View on GitHub</a>
+          <a href="https://github.com/waruni-amanthi" target="_blank" class="btn">View on GitHub</a>
         </div>
       </div>
     </section>
@@ -166,7 +166,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <h2>Contact Me</h2>
-      <p>If you want to connect, email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruniamanthi7-stack" target="_blank">GitHub</a>.</p>
+      <p>If you want to connect, email me at <a href="mailto:youremail@example.com">youremail@example.com</a> or visit my <a href="https://github.com/waruni-amanthi" target="_blank">GitHub</a>.</p>
     </section>
   </main>
 
