--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ footer {
 
   <div class="socials">
     <a href="https://github.com/waruni-amanthi" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/waruni-amanthi-597190209/"><i class="fab fa-linkedin"></i></a>
   </div>
 
   <a href="#about" class="btn">About Me</a>
