Correct Social selection

--- a/index.html
+++ b/index.html
@@ -211,9 +211,14 @@ footer {
   </p>
 
   <div class="socials">
-    <a href="https://github.com/waruni-amanthi" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/waruni-amanthi-597190209/"><i class="fab fa-linkedin"></i></a>
-  </div>
+  <a href="https://github.com/waruni-amanthi" target="_blank" rel="noopener">
+    <i class="fab fa-github"></i>
+  </a>
+
+  <a href="https://www.linkedin.com/in/waruni-amanthi-597190209/" target="_blank" rel="noopener">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</div>
 
   <a href="#about" class="btn">About Me</a>
 </section>
