--- a/index.html
+++ b/index.html
@@ -227,9 +227,19 @@ footer {
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I am currently studying Information Technology at SLIIT.
-    I work with web technologies and ERP systems like Odoo,
-    and I aim to become a skilled software engineer by building real-world projects.
+    <p>
+I am an Information Technology undergraduate at SLIIT with a strong interest in software engineering and web application development.
+Alongside my academic studies, I currently work in a software development environment, where I gain practical industry exposure and
+hands-on experience.
+
+I have developed a <b>web-based Inventory Management System</b> using web technologies, focusing on clean application structure,
+CRUD operations, and real-world business requirements.
+Through my work experience, I have improved my understanding of software development workflows, problem-solving,
+and collaborating within a professional team.
+
+I am motivated to continuously learn, build meaningful projects, and grow into a skilled software engineer by combining
+academic knowledge with practical industry experience.
+</p>
   </p>
 </section>
 
