update my gmail

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ footer{
   <p>
     Feel free to connect with me through GitHub or LinkedIn.
     <br><br>
-    📧 Professional Email: youremail@example.com
+    📧 Professional Email: waruniamanthi7@gmail.com
   </p>
 </section>
 
